Fix issue where actions button focus state in piano lists would be obscured by the piano content overflow settings

--- a/stylesheets/_component.piano.scss
+++ b/stylesheets/_component.piano.scss
@@ -149,6 +149,11 @@ $piano-bg: #fafafa;
             margin-bottom: $margin-base * 2;
         }
     }
+
+    // Stop focus state of submit buttons being cropped by overflow
+    .form__actions--flush {
+        padding-left: 2px;
+    }
 }
 
 .piano__item-content-header {
